--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(simpleCNN)
+project(simpleNN)
 
 # add the executable
-add_executable(simpleCNN cnn.cpp)
+add_executable(simpleNN dnn.cpp)
