final fix for feed forward & simple dnn backprop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(simpleNN)
 
 # add the executable
 # dnn_jake_bouvrie.c, dnn_simple.c
-add_executable(simpleNN dnn_jake_bouvrie.c)
+add_executable(simpleNN dnn_simple.c)
